--- a/src/Placek.csproj
+++ b/src/Placek.csproj
@@ -2,7 +2,7 @@
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
-	<LangVersion>11</LangVersion>
+    <LangVersion>11</LangVersion>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{D9DEFD2C-26B7-47CA-B1B8-55EFC8A618C6}</ProjectGuid>
@@ -33,31 +33,31 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp-firstpass">
-      <HintPath>..\Crate-Fisobs-MainFolder\CrateFisobs\lib\Assembly-CSharp-firstpass.dll</HintPath>
+      <HintPath>..\src\lib\Assembly-CSharp-firstpass.dll</HintPath>
     </Reference>
     <Reference Include="BepInEx">
-      <HintPath>..\Crate-Fisobs-MainFolder\CrateFisobs\lib\BepInEx.dll</HintPath>
+      <HintPath>..\src\lib\BepInEx.dll</HintPath>
     </Reference>
     <Reference Include="HOOKS-Assembly-CSharp">
-      <HintPath>..\Crate-Fisobs-MainFolder\CrateFisobs\lib\HOOKS-Assembly-CSharp.dll</HintPath>
+      <HintPath>..\src\lib\HOOKS-Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="Mono.Cecil">
-      <HintPath>..\Crate-Fisobs-MainFolder\CrateFisobs\lib\Mono.Cecil.dll</HintPath>
+      <HintPath>..\src\lib\Mono.Cecil.dll</HintPath>
     </Reference>
     <Reference Include="Mono.Cecil.Rocks">
-      <HintPath>..\Crate-Fisobs-MainFolder\CrateFisobs\lib\Mono.Cecil.Rocks.dll</HintPath>
+      <HintPath>..\src\lib\Mono.Cecil.Rocks.dll</HintPath>
     </Reference>
     <Reference Include="MonoMod">
-      <HintPath>..\Crate-Fisobs-MainFolder\CrateFisobs\lib\MonoMod.dll</HintPath>
+      <HintPath>..\src\lib\MonoMod.dll</HintPath>
     </Reference>
     <Reference Include="MonoMod.RuntimeDetour">
-      <HintPath>..\Crate-Fisobs-MainFolder\CrateFisobs\lib\MonoMod.RuntimeDetour.dll</HintPath>
+      <HintPath>..\src\lib\MonoMod.RuntimeDetour.dll</HintPath>
     </Reference>
     <Reference Include="MonoMod.Utils">
-      <HintPath>..\Crate-Fisobs-MainFolder\CrateFisobs\lib\MonoMod.Utils.dll</HintPath>
+      <HintPath>..\src\lib\MonoMod.Utils.dll</HintPath>
     </Reference>
     <Reference Include="PUBLIC-Assembly-CSharp">
-      <HintPath>..\Crate-Fisobs-MainFolder\CrateFisobs\lib\PUBLIC-Assembly-CSharp.dll</HintPath>
+      <HintPath>..\src\lib\PUBLIC-Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -68,16 +68,19 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="UnityEngine">
-      <HintPath>..\Crate-Fisobs-MainFolder\CrateFisobs\lib\UnityEngine.dll</HintPath>
+      <HintPath>..\src\lib\UnityEngine.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.AssetBundleModule">
+      <HintPath>lib\UnityEngine.AssetBundleModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.CoreModule">
-      <HintPath>..\Crate-Fisobs-MainFolder\CrateFisobs\lib\UnityEngine.CoreModule.dll</HintPath>
+      <HintPath>..\src\lib\UnityEngine.CoreModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.InputLegacyModule">
-      <HintPath>..\Crate-Fisobs-MainFolder\CrateFisobs\lib\UnityEngine.InputLegacyModule.dll</HintPath>
+      <HintPath>..\src\lib\UnityEngine.InputLegacyModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.Physics2DModule">
-      <HintPath>..\Crate-Fisobs-MainFolder\CrateFisobs\lib\UnityEngine.Physics2DModule.dll</HintPath>
+      <HintPath>..\src\lib\UnityEngine.Physics2DModule.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
